--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          submodules: false  # prevent frontend submodule error
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -20,8 +22,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r backend/requirements.txt
-          pip install -r backend/requirements-dev.txt
+          pip install -r requirements.txt
+          pip install pytest pytest-cov flake8 mypy
 
       - name: Run pytest
         run: pytest -q --maxfail=1 --disable-warnings
