test: 100% pass on pdf_processor; add async flusher shutdown + silence Swig warnings

--- a/pytest.ini
+++ b/pytest.ini
@@ -26,12 +26,14 @@ python_functions = test_*
 addopts = -ra -q
 log_cli = true
 log_cli_level = INFO
+filterwarnings = 
+    ignore::DeprecationWarning:pythonjsonlogger
+    ignore:.*SwigPy.*:DeprecationWarning
+    ignore:.*swigvarlink.*:DeprecationWarning
 
 # --------------------------------------------------------------------
-# MARKERS
-# Custom markers can be defined here for selective test runs.
-# Example usage: pytest -m "aws or slow"
+# ASYNCIO
+# Configure asyncio test behavior to avoid deprecation warnings.
 # --------------------------------------------------------------------
-markers =
-    aws: tests related to AWS utilities
-    slow: long-running or integration tests
+asyncio_mode = auto
+asyncio_default_fixture_loop_scope = function
